================================================================================
Change history for ph-scale
================================================================================

DESIGN ISSUES

HIGH PRIORITY:
- create geometry for bars in graph
- make H3O and OH bars interactive
- what happens when bar drag handles get in the way of zoom buttons?
- how does it look when bar drag handles overlap bar values?

MEDIUM PRIORITY:

LOW PRIORITY:
- delete MoleculeCountAlternateNode and associated developer controls
- break up Liquid into a few smaller classes (separate pH model, fill/drain mechanism, etc) 
- generalize layout code
- can't align baselines of text and numbers drawn using HTMLNode
- pH text field isn't fully selected when it gains focus or when you double-click in it, selection is generally flakey (PSwing issue?)

PERFORMANCE OPTIMIZATIONS:

MIGRATE TO PHETCOMMON:

CLEANUP:
- add cursors to all things that are interactive
- setPickable(false) on non-interactive nodes
- rescale image files to minimize file size
- disable all debug output
- optimize memory management by reusing mutable objects
- javadoc
- organize imports


DONE:
7/12/08 - rename "soda" to "soda pop"
7/12/08 - move origin to the geometric center of drag handle
7/12/08 - fix horizontal positioning of bars and their drag handles
7/12/08 - if a bar is taller than the chart, give it an arrowhead and hide its drag handle
7/12/08 - add stubs to determine bar heights from model and graph settings
7/12/08 - add all view code to create bars and position drag handles
7/12/08 - make bar graph drag handles visible
******* version 0.00.16 (23133)
7/12/08 - hide bar graph drag handles
7/12/08 - make alternate Molecule Count view the primary view
******* version 0.00.15 (23115)
7/11/08 - remove dependency on jfreechart
7/11/08 - add bar drag handles, they don't do anything yet
7/11/08 - make chart a big shorter so that Linear radio button has some space below it on WinXP